Spelling and grammar fixes

--- a/docs/05_enhance_api_with_semantic_kernel/0502.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0502.md
@@ -9,35 +9,35 @@ parent: 'Exercise 05: Enhance the API with Semantic Kernel orchestration'
 
 ## Introduction
 
-Agents are software based entities that leverage AI models to perform work. They are built to perform a wide range of tasks and called different names, such as chatbot or copilot, based on the jobs they do. You can provide agents with a persona or "meta prompt" to influence how it responds to inputs, allowing you to direct how your agent plans tasks, generates responses, and interacts with users.
+Agents are software-based entities that leverage AI models to perform work. They are built to perform a wide range of tasks and are called different names, such as chatbot or copilot, based on their jobs. You can provide agents with a persona or "meta prompt" to influence how they respond to inputs, allowing you to direct how your agent plans tasks, generates responses, and interacts with users.
 
 ## Description
 
-In this task, you will create a copilot agent to help customers service agents create new maintenance requests based issues mentioned during customer calls. The agent will use plugins functions to perform work. To help guide the agent in its interactions with customer service agents, you will give it a persona. You will provide functionality to allow the agent to generated a new maintenance request based on a natural language request from the call center agent.
+In this task, you will create a copilot agent to help customer service agents create new maintenance requests based on issues mentioned during customer calls. The agent will use plugin functions to perform work. You will give it a persona to help guide the agent in its interactions with customer service agents. You will provide the functionality to allow the agent to generate a new maintenance request based on a natural language request from the call center agent.
 
 The key tasks are as follows:
 
 1. Configure an agent named `MaintenanceCopilot` that can be called through the ContosoSuites API by completing TODOs 1-4 defined in the `\src\ContosoSuitesWebAPI\Agents\MaintenanceCopilot.cs` file.
 2. Allow the agent to plan steps using plugin functions by configuring the maintenance request and database plugins.
    - The maintenance request plugin provides kernel functions capable of creating a new maintenance request and saving it to the `MaintenanceRequests` container in Azure Cosmos DB.
-   - The database plugin (in the `DatabaseService`) provides a kernel function for looking up hotel information from Azure SQL database.
+   - The database plugin (in the `DatabaseService`) provides a kernel function for retrieving hotel information from the Azure SQL database.
 3. Enable the `/MaintenanceCopilotChat` endpoint on the API.
 4. Configure the **Copilot Chat** page as a conversational app in the Streamlit dashboard. Ensure calls to the `MaintenanceCopilotChat` API endpoint have a long enough timeout, as some database calls might take longer than the default of 10 seconds.
-5. Use the **Copilot Chat** page to interact with your agent, using the following prompts to have it generate a new maintenance request and save it to Azure Cosmos DB.
+5. Use the **Copilot Chat** page to interact with your agent. Follow the prompts to have it generate a new maintenance request and save it to Azure Cosmos DB.
 6. Test the agent via the Streamlit **Copilot Chat** page using the following conversational prompts:
-   - First, send in this message about a customer reported issue: "A customer is reporting an issue in room 205 at the Grand Regency. The microwave is not working."
-   - Next, ask it, "Did it get saved to the database?"
-   - Now, ask it, "Did you do that before I asked, or after?"
-7. Improve the agent's behavior by provide it with a persona. By providing instructions on how to plan the creation of a request and saving it to the database, you can guide how the agent interacts with users. The prompt you provide should ensuring it has all the required information from the customer service agent, and that it requests permission before performing any consequential actions, such as saving the request to the database. It should also inform users the request has been saved and that hotel maintenance will be addressing the issue as soon as possible.
-8. Test the agent via the **Copilot Chat** page in the dashboard noting the differences in responses with the persona provided. Use the following conversational prompts to interact with the agent.
+   - First, send this message about a customer-reported issue: "A customer is reporting an issue in room 205 at the Grand Regency. The microwave is not working."
+   - Next, ask, "Did it get saved to the database?"
+   - Now, ask, "Did you do that before I asked, or after?"
+7. Improve the agent's behavior by providing it with a persona. By giving instructions on how to plan the creation of a request and saving it to the database, you can guide how the agent interacts with users. The prompt you provide should ensure it has all the required information from the customer service agent and that it requests permission before performing any consequential actions, such as saving the request to the database. It should also inform users the request has been saved and that hotel maintenance will address the issue as soon as possible.
+8. Test the agent via the **Copilot Chat** page in the dashboard, noting the differences in responses with the persona provided. Use the following conversational prompts to interact with the agent.
     - Enter, "Can you help me create a maintenance request?"
       - Notice that the agent is now prompting you to provide additional details, such as the hotel, room number, and a description of the issue.
     - Next, send the following message: "The customer mentioned they were at the regency. Can you provide me with the exact name of that hotel?"
       - This request performs a lookup against the Azure SQL database using the `DatabaseService` plugin.
     - Then, send "Ok, that customer mentioned that they are in the penthouse suite, room 700, and that the television is no longer working."
-      - At this point, the agent should provide the details around the maintenance request it will create, and ask if it is okay to proceed with creating and saving the request.
+      - At this point, the agent should provide the details of the maintenance request it will create and ask if it is okay to proceed with creating and saving the request.
     - Send, "Yes, that looks correct. Please save the request to the database."
-    - You should get a response that, "The maintenance request has been saved to the database. Hotel maintenance has been notified and will address the issue in the Penthouse Suite, room 700, at the Grand Regency as soon as possible."
+    - You should get a response: "The maintenance request has been saved to the database. Hotel maintenance has been notified and will address the issue in the Penthouse Suite, room 700, at the Grand Regency as soon as possible."
 
 ## Success Criteria
 
@@ -46,7 +46,7 @@ The key tasks are as follows:
 - You have configured the maintenance request and database plugins for your agent to use when generating new maintenance requests and retrieving hotel information.
 - You have provided your agent with a prompt to define its persona.
 - You have created a conversation app using the **Copilot Chat** page in the Streamlit Dashboard.
-- You can engage the agent via the Steamlit dashboard and through a natural language conversation, have it create and save a new maintenance request.
+- You can engage the agent via the Steamlit dashboard and, through a natural language conversation, have it create and save a new maintenance request.
 
 ## Learning Resources
 
@@ -82,13 +82,13 @@ The key tasks are as follows:
     public class MaintenanceCopilot(Kernel kernel)
     ```
 
-  - Complete `Exercise 5 Task 2 TODO #3` by uncommenting the class-level variable definitions, providing the `_kernel` and `_history` variables for use within the agent.
-  - Complete `Exercise 5 Task 2 TODO #4` by commenting out the `throw new NotImplementedException()` line, and the uncommenting the remaining code in the function. The lines you are uncommenting allow the Azure OpenAI chat completion service to auto-invoke Kernel functions defined in the database and maintance request plugins. It also adds the incoming user message to the chat history, and insers the agents response once it replies.
+  - Complete `Exercise 5 Task 2 TODO #3` by uncommenting the class-level variable definitions and providing the `_kernel` and `_history` variables for use within the agent.
+  - Complete `Exercise 5 Task 2 TODO #4` by commenting out the `throw new NotImplementedException()` line and uncommenting the remaining code in the function. The lines you are uncommenting allow the Azure OpenAI chat completion service to auto-invoke Kernel functions defined in the database and maintenance request plugins. It also adds the incoming user message to the chat history and inserts the agent's response once it replies.
 
 - To configure the maintenance request and database plugins:
   - In Visual Studio Code, open the `Plugins\MaintenanceRequestPlugin.cs` file in the `ContosoSuitesWebAPI` project.
-  - Complete `Exercise 5 Task 2 TODO #5` by add a reference to the `Microsoft.SemanticKernel` library at the top of the file, along with the other `using` statements.
-  - Complete `Exercise 5 Task 2 TODO #s 6 and 8` by adding Kernel function and Description descriptors of the `CreateMaintenanceRequest` and `SaveMaintenanceRequest` functions. The descriptors for each should look like:
+  - Complete `Exercise 5 Task 2 TODO #5` by referencing the `Microsoft.SemanticKernel` library at the top of the file, along with the other `using` statements.
+  - Complete `Exercise 5 Task 2 TODO #s 6 and 8` by adding the Kernel function and Description descriptors of the `CreateMaintenanceRequest` and `SaveMaintenanceRequest` functions. The descriptors for each should look like:
     - For the `CreateMaintenanceRequest` function:
 
       ```csharp
@@ -119,13 +119,13 @@ The key tasks are as follows:
   - Save the `MaintenanceRequestPlugin` file.
   - Once you've defined your plugin, you must add it to your kernel by creating a new instance of the plugin and adding it to the kernel's plugin collection.
     - Open the `Program.cs` file in the `ContosoSuitesWebAPI` project.
-    - In the `Kernel` singleton service `builder`, add the following code to define a plugin from the `MaintenanceRequestPlugin` type. This can be added directly below the plugin defintion for the `DatabaseService`.
+    - In the `Kernel` singleton service `builder`, add the following code to define a plugin from the `MaintenanceRequestPlugin` type. This can be added directly below the plugin definition for the `DatabaseService`.
 
       ```csharp
       kernelBuilder.Plugins.AddFromType<MaintenanceRequestPlugin>("MaintenanceCopilot");
       ```
 
-    - Because the `MaintenanceRequestPlugin` uses dependency injection to provide a `CosmosClient`, you will also need to add a singleton instance of the that client within your `Kernel` service definition. Do that by adding the following code just below the plugin line you just added:
+    - Because the `MaintenanceRequestPlugin` uses dependency injection to provide a `CosmosClient`, you must add a singleton instance of the that client within your `Kernel` service definition. Do that by adding the following code just below the plugin line you just added:
 
       ```csharp
       kernelBuilder.Services.AddSingleton<CosmosClient>((_) =>
@@ -137,7 +137,7 @@ The key tasks are as follows:
       });
       ```
 
-      This code is a bit reduntant with the `CosmosClient` code earlier in the `Program.cs` file, but the service must be included within the `Kernel` service definition, or is will not be accessible to the plugin.
+      This code is a bit redundant with the `CosmosClient` code earlier in the `Program.cs` file. However, the service must be included within the `Kernel` service definition, or it will not be accessible to the plugin.
 
     - The complete `builder.Service.AddSingleton<Kernel>` method should now look like the following:
 
@@ -173,7 +173,7 @@ The key tasks are as follows:
       });
       ```
 
-  - The `DatabaseService` plugin was already defined in a previous exercise, so there is just a small change that needs to be completed to allow your agent to use it.
+  - The `DatabaseService` plugin was already defined in a previous exercise, so just a small change needs to be completed to allow your agent to use it.
     - Open the `Services\DatabaseService.cs` file to update the database plugin and make it usable by your agent.
     - Update the `[KernelFunction]` descriptor for the `GetHotels()` method and add the name "get_hotels" to the descriptor. The descriptor should now look like:
 
@@ -221,7 +221,7 @@ The key tasks are as follows:
   - Save the file.
 
 - To test the agent via the Streamlit **Copilot Chat** page:
-  - Run the API locally by opening a new terminal window in Visual Studio code, navigating to the `src\ContosoSuitesWebAPI` directory and starting the API using the following command:
+  - Run the API locally by opening a new terminal window in Visual Studio code, navigating to the `src\ContosoSuitesWebAPI` directory, and starting the API using the following command:
 
     ```bash
     dotnet run
@@ -234,19 +234,19 @@ The key tasks are as follows:
     ```
 
   - Navigate to the **Copilot Chat** page using the left-hand menu, then submit the following conversational prompts:
-    - First, send in this message about a customer reported issue: "A customer is reporting an issue in room 205 at the Grand Regency. The microwave is not working."
+    - First, send in this message about a customer-reported issue: "A customer is reporting an issue in room 205 at the Grand Regency. The microwave is not working."
       - You should get a response that a maintenance request was created and will be addressed shortly.
-    - Next, ask it, "Did it get saved to the database?"
+    - Next, ask, "Did it get saved to the database?"
       - It will reply that, yes, the request has been saved.
-    - Now, ask it, "Did you do that before I asked, or after?"
+    - Now, ask, "Did you do that before I asked, or after?"
       - You should get a reply that it was saved after you asked.
 
-      The above behavior results from the agent not having explicit instructions on how it should behave or the steps it should take during the process. It simply calls the `create_maintenance_request` Kernel function and assumes it is done. It is not aware that the request should also be saved to the database. To fix this, you can provide the agent with a persona.
+      The above behavior results from the agent not having explicit instructions on how it should behave or the steps it should take during the process. It simply calls the `create_maintenance_request` Kernel function and assumes it is done. It is unaware that the request should also be saved to the database. To fix this, you can provide the agent with a persona.
 
-    - You can verify the new request was saved by navigating to the **Vector Search** page and entering a search query of "microwave not working at Grand Regency". Accept the default values for max results and minimum similarity score. Your newly saved record should be the first result in the list.
+    - You can verify the new request was saved by navigating to the **Vector Search** page and entering a search query of "microwave not working at Grand Regency." Accept the default values for max results and minimum similarity score. Your newly saved record should be the first result in the list.
 
-- To give your agent a persona and provide it with instructions so it behaves in a more consistent manner:
-  - Open the `MaintenanceCopilot.cs` file in the `src\ContosoSuitesWebAPI` project and update the class-level variable defining the `ChatHistory` to pass the following string into the `ChatHistory()` object during variable decaration.
+- To give your agent a persona and provide it with instructions so it behaves more consistently:
+  - Open the `MaintenanceCopilot.cs` file in the `src\ContosoSuitesWebAPI` project and update the class-level variable defining the `ChatHistory` to pass the following string into the `ChatHistory()` object during variable declaration.
 
     ```csharp
     """
@@ -270,7 +270,7 @@ The key tasks are as follows:
         """);
     ```
 
-    - In the terminal window running the API, stop and restart the API project.
+    - Stop and restart the API project in the terminal window running the API.
 
 - To test the updated agent and evaluate how its responses differ with a persona assigned:
   - Return to the running Streamlit dashboard and the **Copilot Chat** page.
@@ -280,7 +280,7 @@ The key tasks are as follows:
     - Next, send the following message: "The customer mentioned they were at the regency. Can you provide me with the exact name of that hotel?"
       - This request performs a lookup against the Azure SQL database using the `DatabaseService` plugin.
     - Then, send "Ok, that customer mentioned that they are in the penthouse suite, room 700, and that the television is no longer working."
-      - At this point, the agent should provide the details around the maintenance request it will create, and ask if it is okay to proceed with creating and saving the request.
+      - At this point, the agent should provide the details of the maintenance request it will create and ask if it is okay to proceed with creating and saving the request.
     - Send, "Yes, that looks correct. Please save the request to the database."
     - You should get a response similar to the following: "The maintenance request has been saved to the database. Hotel maintenance has been notified and will address the issue in the Penthouse Suite, room 700, at the Grand Regency as soon as possible."
 
