--- a/docs/05_enhance_api_with_semantic_kernel/0501.md
+++ b/docs/05_enhance_api_with_semantic_kernel/0501.md
@@ -9,26 +9,26 @@ parent: 'Exercise 05: Enhance the API with Semantic Kernel orchestration'
 
 ## Introduction
 
-One of the primary features of Semantic Kernel is its ability to add different AI services to the kernel. It includes several built-in services from the Azure Open AI service, which greatly simplified interactions with the Azure OpenAI service from your applications. The Text Embedding Generator service can be used to create vector embeddings, similar to those generated to vectorize search queries when performing vector searches against data in Cosmos DB.
+One of the primary features of Semantic Kernel is its ability to add different AI services to the kernel. It includes several built-in services from the Azure Open AI service, significantly simplifying interactions with the Azure OpenAI service from your applications. The Text Embedding Generator service can create vector embeddings like those generated to vectorize search queries when performing vector searches against data in Cosmos DB.
 
 ## Description
 
-In exercise 3, you used the Azure OpenAI SDK to create a client capable of generating embeddings. In this task, you will update the `VectorizationService` and its `GetEmbeddings` function to take advantage of the the built-in embedding service offered by Semantic Kernel. You will update the code in that service replace the `AzureOpenAIClient` and its associated calls with a `Kernel` service to perform text embedding.
+In exercise 3, you used the Azure OpenAI SDK to create a client capable of generating embeddings. In this task, you will update the `VectorizationService` and its `GetEmbeddings` function to take advantage of the built-in embedding service offered by Semantic Kernel. You will update the code in that service to replace the `AzureOpenAIClient` and its associated calls with a `Kernel` service to perform text embedding.
 
 The key tasks are as follows:
 
-1. Add the the Text Embedding Generation built-in service to the Kernel builder in the `Program.cs` file. Suppress any warnings using `# pragma` directives.
+1. Add the Text Embedding Generation built-in service to the Kernel builder in the `Program.cs` file. Suppress any warnings using `# pragma` directives.
 2. Remove the `AzureOpenAIClient` singleton service from `Program.cs`, as it will no longer be necessary.
 3. Update the `VectorizationService` primary constructor to remove the `AzureOpenAIClient` and inject the `Kernel` service.
-4. Change the `GetEmbeddings` method to use the built-it vector embeddings capabilities of Semantic Kernel.
+4. Change the `GetEmbeddings` method to use the built-in vector embedding capabilities of Semantic Kernel.
 5. Test the updated `VectorizationService` by running the Streamlit dashboard and executing the following maintenance request query on the **Vector Search** page:
-   - Enter a search query of "Show me requests relating to elevator noises" with a max results of 10 and a minimum similarity score of 0.78.
+   - Enter a search query of "Show me requests relating to elevator noises" with max results of ten and a minimum similarity score of 0.78.
 
 ## Success Criteria
 
 - You have added the Azure OpenAI Text Embedding Generation service to the Kernel builder in the `Program.cs` file.
 - You have updated the `VectorizationService` and its `GetEmbeddings` method to use the built-in text embedding generation service to create vector embeddings for query text.
-- You have successfully executed a query against the `Vectorize` and `/VectorSearch` endpoints of the web API using the Streamlit dashboard's **Vector Search** page.
+- You have successfully executed a query against the web API's `Vectorize` and `/VectorSearch` endpoints using the Streamlit dashboard's **Vector Search** page.
 
 ## Learning Resources
 
@@ -56,13 +56,13 @@ The key tasks are as follows:
 
     The code will be underlined by a red squiggly line, indicating an issue.
 
-    The `AddAzureOpenAITextEmbeddingGeneration` feature of Semantic Kernel is flagged for evaluation purposes only at this time, so, you must suppress that issue to be able to use it in the project.
+    The `AddAzureOpenAITextEmbeddingGeneration` feature of Semantic Kernel is flagged for evaluation purposes only at this time, so you must suppress that issue to be able to use it in the project.
   - To suppress the issue, hover your mouse cursor over the `AddAzureOpenAITextEmbeddingGeneration` function call and select the dropdown in the tooltip icon that appears.
     - In the flyout menu, select **Suppress of configure issues -> Suppress SKEXP0010** and then select **in Source**.
 
-        ![In Program.cs, the tip button for the inserted code is highlighted, and Suppress or configure issues items is highlighted in the flyout menu. Suppress SKEXP0010 and in Source are highlighted in submenus.](../../media/Solution/0501-suppress-issue-in-source.png)
+        ![In Program.cs, the tip button for the inserted code is highlighted, and Suppress or configure issues items are highlighted in the flyout menu. Suppress SKEXP0010 and in Source are highlighted in submenus.](../../media/Solution/0501-suppress-issue-in-source.png)
 
-    - This will wrap the code in `#pragma warning disable` and `#pragma warning restore` directives and the final code will look like:
+    - This will wrap the code in `#pragma warning disable` and `#pragma warning restore` directives, and the final code will look like this:
 
       ```csharp
       #pragma warning disable SKEXP0010 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
@@ -99,7 +99,7 @@ The key tasks are as follows:
     private readonly Kernel _kernel = kernel;
     ```
 
-- The steps to update the `VectorizationService` to use the built-it vector embeddings capabilities of Semantic Kernel:
+- The steps to update the `VectorizationService` to use the built-in vector embedding capabilities of Semantic Kernel:
 
   - In the `GetEmbeddings` function:
     - Remove the `embeddingClient` variable, as it is no longer necessary.
@@ -110,7 +110,7 @@ The key tasks are as follows:
       var embeddings = await _kernel.GetRequiredService<ITextEmbeddingGenerationService>().GenerateEmbeddingAsync(text);
       ```
 
-    - As you did in the `Program.cs` class, you must supress the issue with the `ITextEmbeddingGenerationService` feature using `# pragma` directives to use it in this class. The final code with look similar to the following:
+    - As you did in the `Program.cs` class, you must suppress the issue with the `ITextEmbeddingGenerationService` feature using `# pragma warning` directives to use it in this class. The final code will look similar to the following:
 
       ```csharp
       #pragma warning disable SKEXP0001 // Type is for evaluation purposes only and is subject to change or removal in future updates. Suppress this diagnostic to proceed.
@@ -135,14 +135,14 @@ The key tasks are as follows:
     dotnet run
     ```
 
-  - Once the API has started, as indicated by output in the terminal stating `Now listening on: http://localhost:5292`, open a new terminal window in Visual Studio Code, navigating to the `src\ContosoSuitesDashboard` folder, and running the following command to start the Streamlit dashboard:
+  - Once the API has started, as indicated by output in the terminal stating `Now listening on: http://localhost:5292`, open a new terminal window in Visual Studio Code, navigate to the `src\ContosoSuitesDashboard` folder, and run the following command to start the Streamlit dashboard:
 
     ```python
     python -m streamlit run Index.py
     ```
 
   - Navigate to the **Vector Search** page in the Streamlit dashboard, and then submit the following query for maintenance requests:
-    - Enter a search query of "Show me requests relating to elevator noises" with a max results of 10 and a minimum similarity score of 0.78.
-  - You should see several results pertaining to elevators and noise, indicating the updates to the API and `VectorizationService` are working correctly.
+    - Enter a search query of "Show me requests relating to elevator noises" with max results of ten and a minimum similarity score of 0.78.
+    - You should see several results about elevators and noise, indicating the updates to the API and `VectorizationService` are working correctly.
 
 </details>
