Grammar and spelling fixes

--- a/docs/07_resource_cleanup/0701.md
+++ b/docs/07_resource_cleanup/0701.md
@@ -7,7 +7,7 @@ parent: 'Exercise 07: Workshop resource cleanup'
 
 # Task 01: Delete Azure resources and GitHub codespaces
 
-Once you have completed the exercises in this workshop, delete the Azure resources and GitHub codespaces you created. You are charged for the configured capacity in Azure, so this ensures you are not incurring charges for undeleted workshop resources.
+Once you have completed the exercises in this workshop, delete the Azure resources and GitHub codespaces you created. You are charged for the configured capacity in Azure, so removing all resources ensures you do not incur charges for undeleted workshop resources.
 
 In this task, you will delete the GitHub codespace and Azure resources you created for this workshop.
 
@@ -17,7 +17,7 @@ To delete your GitHub codespaces instance:
 
 1. Navigate to your forked GitHub repository.
 2. Select the **Code** button.
-3. Next to your active Codespace, select the ellipsis (...) button.
+3. Select the ellipsis (`...`) button next to your active Codespace.
 4. Choose the **Delete** option.
 5. In the modal confirmation dialog, select **Delete** to confirm that you wish to delete the Codespace.
 
