Moving task 3 into task 2 as an optional bonus activity

--- a/docs/06_add_genai_gateway_capabilities_with_api_management/0602.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/0602.md
@@ -30,6 +30,18 @@ The key tasks are as follows:
 5. Confirm you can successfully make chat completion calls via the web API by creating a new maintenance request using the Maintenance Request Copilot on the **Streamlit Chat** Streamlit page.
 6. Inspect token consumption metrics emitted by the APIM policy in Application Insights. The existence of these metrics helps to verify that Azure OpenAI API calls are going through your APIM instance and that the policies you defined are working correctly.
 
+**Bonus task** (if time allows):
+
+This bonus task allows you to explore API Management's support of backend pools when you want to implement multiple backends for an API and load-balance requests across those backends. You will implement a load-balanced pool to distribute the LLM workload across two instances of Azure OpenAI.
+
+{: .note }
+> Resource quotas may prohibit you from deploying a second instance of Azure OpenAI in the same subscription or region, so it may not be possible for everyone to complete this bonus activity.
+
+1. Deploy a second Azure OpenAI instance in a new resource group using the `DeployAzureOpenAIResource.bicep` script. It is also recommended that you select a region different from your primary resource group.
+2. Import the new Azure OpenAI service resource as an API in Azure API Management.
+3. Configure a round-robin load balancing policy to swap requests between the backends.
+4. Test the policy using the **Test** tab for the **Creates a completion for the chat message** API endpoint. Use the **Trace** button to send the request and inspect the `set-backend-service` block within the Inbound section and the `set-backend-service` block within the Backend section to determine which backend was used.
+
 ## Success Criteria
 
 - You have created a product named "Contoso Web API" in APIM that requires a subscription and has been added to the Azure OpenAI API.
@@ -38,6 +50,7 @@ The key tasks are as follows:
 - You have updated the `ContosoSuitesWebAPI` project to route all chat completion and embedding calls through the Azure OpenAI API endpoint defined in APIM.
 - You have successfully used the Maintenance Request Copilot on the **Copilot Chat** Streamlit page to generate a maintenance request.
 - You have inspected the logs in Application Insights to view the token consumption of interactions with the copilot.
+- If possible, you have completed the bonus task of provisioning a second Azure OpenAI instance and adding round-robin load balancing to your Azure OpenAI API exposed through APIM.
 
 ## Learning Resources
 
@@ -45,11 +58,12 @@ The key tasks are as follows:
 - [Tutorial: Create and publish a product](https://learn.microsoft.com/azure/api-management/api-management-howto-add-products?tabs=azure-portal)
 - [Subscriptions in Azure API Management](https://learn.microsoft.com/azure/api-management/api-management-subscriptions)
 - [Create subscriptions in Azure API Management](https://learn.microsoft.com/azure/api-management/api-management-howto-create-subscriptions)
+- [Load-balanced pool in Azure API Management](https://learn.microsoft.com/en-us/azure/api-management/backends?tabs=bicep#load-balanced-pool)
 
 ## Solution
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary>Expand this section to view the solution for the key tasks</summary>
 
 - To create and publish a *protected* product in APIM and add it to your Azure OpenAI API:
   - Navigate to your APIM instance in the [Azure portal](https://portal.azure.com/), then select **Products** under the **APIs** menu.
@@ -180,5 +194,104 @@ The key tasks are as follows:
         TotalTokens = sumif(value, name == 'Total Tokens')
         by ItemId, ApiId, ClientIpAddress
     ```
+
+</details>
+
+<details markdown="block">
+<summary>Expand this section to view the solution for the bonus task</summary>
+
+- To deploy a second Azure OpenAI service into a new resource group using a Bicep script:
+  - Create a new resource group in your subscription. This subscription **must** have access to Azure OpenAI, and you should deploy the resource group to a [region that supports GPT-4o](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#model-summary-table-and-region-availability).
+
+    > **Important**: You must deploy to an Azure region that supports the **GPT-4o, 2024-05-13** model. You must create your Azure OpenAI resource in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#model-summary-table-and-region-availability).
+
+  - Right-click the `DeployAzureOpenAI.bicep` script in the `src/InfrastructureAsCode/` folder, select **Deploy Bicep File...**, and follow the prompts to provide a deployment name and select the new resource group you created above. This script has no associated parameter file, so select **None** at that prompt.
+
+    The Bicep script will deploy an Azure OpenAI service and create deployments for the `gpt-4o` and `text-embedding-ada-002` models within that instance that match what is in the primary service instance. The models deployed between load-balanced services must have the same name and version.
+
+- To import the new Azure OpenAI service resource as an API in APIM, follow the same steps you used when importing your primary Azure OpenAI service in Exercise 6 Task 1, but provide a different name to the API, such as "Secondary Azure OpenAI API."
+  - Add the "Contoso Web API" product to the API, allowing it to be accessible using the same subscription key.
+  - When configuring the token consumption management policy, assign a TPM value of "4000" or higher if you adjusted that during the Maintenance Request Copilot testing.
+
+- To create a backend load balancing pool:
+  - Open the **Azure OpenAI API** design window, select **All operations**, then open the Inbound policies XML document.
+  - At the top of the `<inbound>` processing section, insert the following variable declarations and policy snippets:
+
+    ```xml
+    <!-- Create a backend counter variable that is persistent in the local cache between requests -->
+    <cache-lookup-value key="backend-counter" variable-name="backend-counter" />
+    <choose>
+        <when condition="@(!context.Variables.ContainsKey("backend-counter"))">
+            <set-variable name="backend-counter" value="0" />
+            <cache-store-value key="backend-counter" value="0" duration="100" />
+        </when>
+    </choose>
+    <!-- Choose the backend service based on the backend variable -->
+    <choose>
+        <when condition="@(context.Variables.GetValueOrDefault<string>("backend-counter") == "0")">
+            <set-backend-service id="primary-backend" backend-id="azure-openai-api-openai-endpoint" />
+            <set-variable name="backend-counter" value="1" />
+            <cache-store-value key="backend-counter" value="1" duration="100" />
+        </when>
+        <otherwise>
+            <set-backend-service id="secondary-backend" backend-id="secondary-azure-openai-api-openai-endpoint" />
+            <set-variable name="backend-counter" value="0" />
+            <cache-store-value key="backend-counter" value="0" duration="100" />
+        </otherwise>
+    </choose>
+    ```
+
+  - Select **Save**.
+
+- To test the API, select **Azure OpenAI API** from the list of APIs on your API Management service's APIs page.
+  - Select the **Test** tab, then select the **Creates a completion for the chat message** endpoint.
+  - On the **Creates a completion for the chat message** page, enter the following under **Template parameters**:
+    - **deployment-id**: Enter "gpt-4o"
+    - **api-version**: Enter "2024-06-01"
+  - Scroll down to the **Request body** section, ensure **Raw** is selected, and paste the following into the text box.
+
+    ```json
+    {
+        "messages":[
+            {"role": "system", "content": "You are a sarcastic unhelpful assistant."},
+            {"role": "user", "content": "Tell me a story about AI."}
+        ]
+    }
+    ```
+
+  - Select **Trace** at the bottom of the page.
+  - Scroll to the page's **HTTP response** section.
+  - Select the **Trace** tab.
+  - Use the **Backend** link to jump to the backend section of the trace output and locate the `set-backend-service` block. Within this block, note the `oldBackendServiceUrl` and the `newBackendServiceUrl` values. If they are the same, the primary instance was used. If they differ, the secondary Azure OpenAI instance was used.
+
+    After the first request, the value looks like this, where the old and new backend services URLs are the same:
+
+    ```json
+    {
+        "message": "Backend service URL was changed.",
+        "oldBackendServiceUrl": "https://ob23xnbzldnb62-openai.openai.azure.com/openai",
+        "newBackendServiceUrl": "https://ob23xnbzldnb62-openai.openai.azure.com/openai",
+        "request": {
+            "url": "https://ob23xnbzldnb62-openai.openai.azure.com/openai/deployments/gpt-4o/chat/completions?api-version=2024-06-01"
+        }
+    }
+    ```
+
+    After the second request, the `newBackendServiceUrl` value has changed to the secondary Azure OpenAI instance:
+
+    ```json
+    {
+    "message": "Backend service URL was changed.",
+        "oldBackendServiceUrl": "https://ob23xnbzldnb62-openai.openai.azure.com/openai",
+        "newBackendServiceUrl": "https://hqfycfwt6hjh4-openai.openai.azure.com/openai",
+        "request": {
+            "url": "https://hqfycfwt6hjh4-openai.openai.azure.com/openai/deployments/gpt-4o/chat/completions?api-version=2024-06-01"
+        }
+    }
+    ```
+
+    Each subsequent request will round-robin requests back and forth between the two instances.
+
+- Since the Contoso Suites Web API is already configured to send requests through APIM, the application does not need additional configuration changes to take advantage of load balancing across multiple Azure OpenAI instances.
 
 </details>
