Adding note to also delete the second resource group from bonus task in E06

--- a/docs/07_resource_cleanup/0701.md
+++ b/docs/07_resource_cleanup/0701.md
@@ -38,3 +38,5 @@ Follow these instructions to delete your Azure resource group and all resources 
     ![Screenshot of the Overview blade of the resource group with the Delete resource group button highlighted by a red box.](../../media/Solution/0701-resource-group-delete.png)
 
 4. In the confirmation dialog, enter the resource group name you are deleting to confirm and then select **Delete**.
+
+5. If you completed the bonus task in Exercise 6, repeat the above steps to delete the resource group you created to host your secondary Azure OpenAI service.
