Adding load balancing learning resources

--- a/docs/06_add_genai_gateway_capabilities_with_api_management/0602.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/0602.md
@@ -58,7 +58,8 @@ This bonus task allows you to explore API Management's support of backend pools 
 - [Tutorial: Create and publish a product](https://learn.microsoft.com/azure/api-management/api-management-howto-add-products?tabs=azure-portal)
 - [Subscriptions in Azure API Management](https://learn.microsoft.com/azure/api-management/api-management-subscriptions)
 - [Create subscriptions in Azure API Management](https://learn.microsoft.com/azure/api-management/api-management-howto-create-subscriptions)
-- [Load-balanced pool in Azure API Management](https://learn.microsoft.com/en-us/azure/api-management/backends?tabs=bicep#load-balanced-pool)
+- [Load-balanced pool in Azure API Management](https://learn.microsoft.com/azure/api-management/backends?tabs=bicep#load-balanced-pool)
+- [Load balancing options](https://learn.microsoft.com/azure/api-management/backends?tabs=bicep#load-balancing-options)
 
 ## Solution
 
